--- a/src/ChartComponent.css
+++ b/src/ChartComponent.css
@@ -36,3 +36,16 @@
     color: white; /* White text for the date range */
   }
   
+  /* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
