--- a/src/Footer.css
+++ b/src/Footer.css
@@ -20,6 +20,20 @@
   .footer p {
     margin: 10px 0;
   }
+
+  /* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
   
 
 
