--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,17 @@ body {
 .App-link {
   color: #61dafb;
 }
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
