--- a/src/EditGoalModal.css
+++ b/src/EditGoalModal.css
@@ -89,3 +89,17 @@
 .close-button:hover {
   color: #000;
 }
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
