--- a/src/Goals.css
+++ b/src/Goals.css
@@ -82,3 +82,17 @@ h1 {
   color: white;
   font-size: 24px;
 }
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
