--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -58,3 +58,18 @@
 .navbar.collapsed ul li svg {
   margin-right: 0;
 }
+
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
