--- a/src/NewGoals.css
+++ b/src/NewGoals.css
@@ -91,13 +91,6 @@ h1 {
     color: #838181; /* Change this to your desired color */
   }
 
-
-
-
-
-
-
-
   .modal-overlay {
     position: fixed;
     top: 0;
@@ -137,4 +130,16 @@ h1 {
   
   /* Keep other existing styles */
   
-  
+  /* For Mobile */
+@media screen and (max-width: 540px) {
+    .view {
+        width: 400px;
+    }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+    .view {
+        width: 600px;
+    }
+}
