--- a/src/stopwatch.css
+++ b/src/stopwatch.css
@@ -68,3 +68,17 @@ body {
   text-align: center;
   margin-top: 10px;
 }
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+  .view {
+      width: 400px;
+  }
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+  .view {
+      width: 600px;
+  }
+}
