--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -7,7 +7,7 @@
   color: #fff;
   height: 100%;
   transition: width 0.3s ease;
-  overflow: hidden; /* Prevent additional scrolls */
+  overflow: hidden;
 }
 
 .navbar.collapsed {
@@ -31,7 +31,7 @@
 
 .navbar ul {
   list-style: none;
-  padding: 80px 0 0 0; /* Adjusting padding to make space for the toggle button */
+  padding: 80px 0 0 0;
   margin: 0;
 }
 
@@ -59,15 +59,12 @@
   margin-right: 0;
 }
 
-
-/* For Mobile */
 @media screen and (max-width: 540px) {
   .view {
       width: 400px;
   }
 }
 
-/* For Tablets */
 @media screen and (min-width: 540px) and (max-width: 780px) {
   .view {
       width: 600px;
