--- a/src/Goals.css
+++ b/src/Goals.css
@@ -1,9 +1,9 @@
 .rect {
   width: 600px;
-  border: 2px solid #ffffff; /* Thin border */
+  border: 2px solid #ffffff;
   border-radius: 20px;
   padding: 20px;
-  background-color: transparent; /* Transparent background */
+  background-color: transparent;
   margin: 20px auto;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center the goal items horizontally */
+  align-items: center; 
 }
 
 .goal-item {
@@ -43,7 +43,7 @@
   cursor: pointer;
   color: #fff;
   font-weight: bold;
-  width: 450px; /* Ensure the items are not taking full width */
+  width: 450px; 
 }
 
 .icons {
@@ -52,18 +52,18 @@
 
 .edit-icon, .delete-icon {
   cursor: pointer;
-  margin: 0 5px; /* Adjust margins to bring icons closer together */
+  margin: 0 5px;
 }
 
 .goals-footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%; /* Ensure the footer takes the full width of the container */
+  width: 100%; 
 }
 
 h1 {
-  color: #ffffff; /* Make the "Your goals:" text white */
+  color: #ffffff;
 }
 
 .add-goals {
@@ -83,14 +83,12 @@ h1 {
   font-size: 24px;
 }
 
-/* For Mobile */
 @media screen and (max-width: 540px) {
   .view {
       width: 400px;
   }
 }
 
-/* For Tablets */
 @media screen and (min-width: 540px) and (max-width: 780px) {
   .view {
       width: 600px;
