--- a/src/NewGoals.css
+++ b/src/NewGoals.css
@@ -1,9 +1,9 @@
 .rec {
-    height: auto; /* Adjust height to content */
+    height: auto; 
     width: 500px;
     background-color: #fff;
     position: relative;
-    margin: 20px auto; /* Center horizontally */
+    margin: 20px auto; 
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     border-radius: 20px;
     display: flex;
@@ -28,7 +28,7 @@ h1 {
     align-items: center;
     justify-content: flex-start;
     width: calc(100% - 40px);
-    margin-bottom: 20px; /* Add even space between form groups */
+    margin-bottom: 20px; 
 }
 
 .goal-input {
@@ -41,13 +41,13 @@ h1 {
 .inline-container {
     display: flex;
     align-items: center;
-    justify-content: flex-start; /* Align items to start */
+    justify-content: flex-start;
     width: 100%;
 }
 
 .time-label, .color-label {
     color: #838181;
-    margin-right: 10px; /* Space between label and input/button */
+    margin-right: 10px;
 }
 
 .time-input {
@@ -88,7 +88,7 @@ h1 {
     position: absolute;
     top: 10px;
     right: 10px;
-    color: #838181; /* Change this to your desired color */
+    color: #838181; 
   }
 
   .modal-overlay {
@@ -128,16 +128,13 @@ h1 {
     color: #000;
   }
   
-  /* Keep other existing styles */
-  
-  /* For Mobile */
+
 @media screen and (max-width: 540px) {
     .view {
         width: 400px;
     }
 }
 
-/* For Tablets */
 @media screen and (min-width: 540px) and (max-width: 780px) {
     .view {
         width: 600px;
