--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,17 +1,27 @@
 .navbar {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 200px;
   background: #000000;
   color: #fff;
-  height: 100%;
-  transition: width 0.3s ease;
+  transition: width 0.3s ease, height 0.3s ease;
   overflow: hidden;
 }
 
-.navbar.collapsed {
+.navbar.left {
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 100%;
+}
+
+.navbar.left.collapsed {
   width: 60px;
+}
+
+.navbar.top {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
 }
 
 .navbar .navbar-toggle {
@@ -25,6 +35,14 @@
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.navbar.left .navbar-toggle {
+  height: 60px;
+  width: 60px;
+}
+
+.navbar.top .navbar-toggle {
   height: 60px;
   width: 60px;
 }
@@ -33,6 +51,13 @@
   list-style: none;
   padding: 80px 0 0 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar.top ul {
+  flex-direction: row;
+  padding: 0 0 0 80px;
 }
 
 .navbar ul li {
@@ -42,7 +67,8 @@
   align-items: center;
 }
 
-.navbar ul li:hover {
+.navbar.left ul li:hover,
+.navbar.top ul li:hover {
   background: #555;
 }
 
@@ -50,23 +76,11 @@
   margin-right: 10px;
 }
 
-.navbar.collapsed ul li {
+.navbar.left.collapsed ul li {
   justify-content: center;
   padding: 30px 0;
 }
 
-.navbar.collapsed ul li svg {
+.navbar.left.collapsed ul li svg {
   margin-right: 0;
-}
-
-@media screen and (max-width: 540px) {
-  .view {
-      width: 400px;
-  }
-}
-
-@media screen and (min-width: 540px) and (max-width: 780px) {
-  .view {
-      width: 600px;
-  }
 }
